# apod-desk

./: .env.defaults  README.md  main.py  pyproject.toml
apod_desk/: __main__.py
src/apod_desk/: __init__.py
