[tool.poetry]
name = "apod"
version = "0.1.0"
description = ""
authors = ["Richard Sarkis <rich@sark.is>"]

[tool.poetry.dependencies]
python = "^3.8"
pyobjc = "^10.3.1"
Pillow = "^10.4.0"
requests = "^2.32.3"
structlog = "^24.4.0"
fake-useragent = "^1.5.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
