[tool.poetry]
name = "apod"
version = "0.1.0"
description = ""
authors = ["Richard Sarkis <rich@sark.is>"]

[tool.poetry.dependencies]
python = "^3.9"
pyobjc = "^10.3.2"
Pillow = "^11.0.0"
requests = "^2.32.3"
structlog = "^24.4.0"
fake-useragent = "^2.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
